--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>yourname</title>
-</head>
+<h1>Hello I am a potato</h1>
+<img class="profile" src="https://cdn.shopify.com/s/files/1/1017/2183/t/2/assets/live-preview-potato.png?4839514862613583315">
+<h2>Skills</h2>
+<ul>
+  <li>Being brown</li>
+  <li>Being starchy</li>
+</ul>
+<h2>Education</h2>
+<ul>
+  <li>Potato Primary School</li>
+  <li>Potato Institution</li>
+  <li>Potato Junior College</li>
+  <li>National University of Potato</li>
+</ul>
+<h2>Goals in life</h2>
+<p>Get eaten, preferably in a gourmet resturant. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, doner, andouille sausage ham swine kielbasa chicken tri-tip.</p>
 
-<body>
-<h1>My favourite school 3 courses</h1>
-<ol>
-    <li>nothing</li>
-    <li>Thats all</li>
-    <li>Yeah</li>
- </ol>
-
-</body>
-</html>
