--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
 ⠀⠀⠛⢿⣿⣿⣿⣿⣿⣿⡿⠟
 ⠀⠀⠀⠀⠀⠉⠉⠉
 -->
-<h1>Hello I am a potato</h1>
-<img class="profile" src="https://cdn.shopify.com/s/files/1/1017/2183/t/2/assets/live-preview-potato.png?4839514862613583315">
-<h2>Skills</h2>
+<h1>Hello I am ???</h1>
+<img class="profile" src="https://www.google.com.sg/url?sa=i&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwiGsd3JnuXfAhXJPo8KHSauBrcQjRx6BAgBEAU&url=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FYour_Name&psig=AOvVaw0Ni2rZjUdwDOus1d2zm4iR&ust=1547279260928339">
+<h2>help</h2>
 <ul>
-  <li>Being brown</li>
-  <li>Being starchy</li>
+  <li>what is</li>
+  <li>your name</li>
 </ul>
-<h2>Education</h2>
+<h2>my name is</h2>
 <ul>
-  <li>Potato Primary School</li>
-  <li>Potato Institution</li>
-  <li>Potato Junior College</li>
-  <li>National University of Potato</li>
+  <li>She</li>
+  <li>n</li>
+  <li>g</li>
+  <li>L</li>
 </ul>
 <h2>Goals in life</h2>
-<p>Get eaten, preferably in a gourmet resturant. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, doner, andouille sausage ham swine kielbasa chicken tri-tip.</p>
+<p>to remember your name</p>
 
