--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 ⠀⠀⠀⠀⠀⠉⠉⠉
 -->
 <h1>Hello I am ???</h1>
-<img class="profile" src="https://www.google.com.sg/url?sa=i&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwiGsd3JnuXfAhXJPo8KHSauBrcQjRx6BAgBEAU&url=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FYour_Name&psig=AOvVaw0Ni2rZjUdwDOus1d2zm4iR&ust=1547279260928339">
+<img src="https://www.google.com.sg/url?sa=i&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwiGsd3JnuXfAhXJPo8KHSauBrcQjRx6BAgBEAU&url=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FYour_Name&psig=AOvVaw0Ni2rZjUdwDOus1d2zm4iR&ust=1547279260928339">
 <h2>help</h2>
 <ul>
   <li>what is</li>
