--- a/index.html
+++ b/index.html
@@ -15,30 +15,39 @@
 ⠀⠀⠀⠀⠀⠉⠉⠉
 -->
 
-<h1>Hello I am a potato</h1>
-<img class="profile" src="https://cdn.shopify.com/s/files/1/1017/2183/t/2/assets/live-preview-potato.png?4839514862613583315">
-<h2>Skills</h2>
-<ul>
-  <li>Being brown</li>
-  <li>Being starchy</li>
-</ul>
-<h2>Education</h2>
-<ul>
-  <li>Potato Primary School</li>
-  <li>Potato Institution</li>
-  <li>Potato Junior College</li>
-  <li>National University of Potato</li>
-</ul>
-<h2>Goals in life</h2>
-<p>Get eaten, preferably in a gourmet resturant. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, doner, andouille sausage ham swine kielbasa chicken tri-tip.</p>
+<html>
+<head>
+<style>
+body {
+  background-color: lightblue;
+  font-family: Coiny, cursive;
+}
+
+</style>
+<link href="https://fonts.googleapis.com/css?family=Coiny" rel="stylesheet">
+</head>
 
 <body>
-<h1>My favourite school 3 courses</h1>
+<h1 class="cursive">Hi I am Cody</h1>
+
+<<img class="_6q-tv" src="https://instagram.fsin6-1.fna.fbcdn.net/vp/8a4d0890c66e2f1d165a4a954e614ad4/5CC95711/t51.2885-19/s150x150/47183749_298921820753118_8736718196012220416_n.jpg?_nc_ht=instagram.fsin6-1.fna.fbcdn.net" alt="the_below_average_player's profile picture">>
+
+<h2>My hobbies</h2>
+<ul>
+  <li>Game (WoT/OW/BFV)</li>
+  <li>Sleep</li>
+  <li>Eat</li>
+</ul>  
+
+<h2>Goals in 2019</h2>
+
 <ol>
-    <li>nothing</li>
-    <li>Thats all</li>
-    <li>Yeah</li>
- </ol>
+  <li>Game less</li>
+  <li>Eat less</li>
+  <li>Sleep more</li>
+</ol> 
+
+
 
 </body>
 </html>
