--- a/index.html
+++ b/index.html
@@ -28,23 +28,23 @@ body {
 </head>
 
 <body>
-<h1 class="cursive">Hi I am Cody</h1>
+<h1 class="cursive">Hi I am A wEEB</h1>
 
-<<img class="_6q-tv" src="https://instagram.fsin6-1.fna.fbcdn.net/vp/8a4d0890c66e2f1d165a4a954e614ad4/5CC95711/t51.2885-19/s150x150/47183749_298921820753118_8736718196012220416_n.jpg?_nc_ht=instagram.fsin6-1.fna.fbcdn.net" alt="the_below_average_player's profile picture">>
+<<img class="_6q-tv" src="https://qph.fs.quoracdn.net/main-qimg-3ceecb8dd595bbf10bda1c4665f738b6">>
 
 <h2>My hobbies</h2>
 <ul>
-  <li>Game (WoT/OW/BFV)</li>
-  <li>Sleep</li>
-  <li>Eat</li>
+  <li>Watch Anime (WoT/OW/BFV)</li>
+  <li>Read Manga</li>
+  <li>Read Light Novels</li>
 </ul>  
 
 <h2>Goals in 2019</h2>
 
 <ol>
-  <li>Game less</li>
-  <li>Eat less</li>
-  <li>Sleep more</li>
+  <li>start doing homework</li>
+  <li>start getting grades</li>
+  <li>start sleeping</li>
 </ol> 
 
 
