--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ body {
 
 <h2>My hobbies</h2>
 <ul>
-  <li>Watch Anime (WoT/OW/BFV)</li>
+  <li>Watch Anime</li>
   <li>Read Manga</li>
   <li>Read Light Novels</li>
 </ul>  
