--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
 <body>
 <h1 class="cursive">Hi I am A wEEB</h1>
 
-<<img class="_6q-tv" src="https://qph.fs.quoracdn.net/main-qimg-3ceecb8dd595bbf10bda1c4665f738b6">>
+<img class="_6q-tv" src="https://qph.fs.quoracdn.net/main-qimg-3ceecb8dd595bbf10bda1c4665f738b6">
 
 <h2>My hobbies</h2>
 <ul>
