--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 -->
 
 <html>
+  <head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+</head>
 <head>
 <style>
 body {
@@ -31,6 +34,8 @@ body {
 <h1 class="cursive">Hi I am A wEEB</h1>
 
 <img class="_6q-tv" src="https://qph.fs.quoracdn.net/main-qimg-3ceecb8dd595bbf10bda1c4665f738b6">
+  
+<p class="animated tada infinite" style="font-size: 30px;">Facts about me</p>
 
 <h2>My hobbies</h2>
 <ul>
@@ -47,7 +52,7 @@ body {
   <li>start sleeping</li>
 </ol> 
 
-<img class="_6q-tv" src="https://qph.fs.quoracdn.net/main-qimg-3ceecb8dd595bbf10bda1c4665f738b6">
+<img class="_6q-tv" src="">
 
 </body>
 </html>
