--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ body {
 
 <img class="_6q-tv" src="https://qph.fs.quoracdn.net/main-qimg-3ceecb8dd595bbf10bda1c4665f738b6">
   
-<p class="animated tada infinite" style="font-size: 30px;">Facts about me</p>
+<p class="animated heartBeat infinite" style="font-size: 30px;">Facts about me</p>
 
 <h2>My hobbies</h2>
 <ul>
