--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ body {
 </head>
 
 <body>
-<h1 class="cursive">Hi I am A wEEB</h1>
+<h1 class="cursive">hI I Am A wEEB</h1>
 
 <img class="_6q-tv" src="https://qph.fs.quoracdn.net/main-qimg-3ceecb8dd595bbf10bda1c4665f738b6">
   
