--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@ body {
 </head>
 
 <body>
-<h1 class="cursive">hI I Am A wEEB</h1>
+<h1 class="cursive">HI I Am A wEEB</h1>
 
 <img class="_6q-tv" src="https://qph.fs.quoracdn.net/main-qimg-3ceecb8dd595bbf10bda1c4665f738b6">
   
-<p class="animated heartBeat infinite" style="font-size: 30px;">Facts about me</p>
+<p class="animated bounceInLeft" style="font-size: 30px;">Facts about me</p>
 
 <h2>My hobbies</h2>
 <ul>
