--- a/index.html
+++ b/index.html
@@ -32,20 +32,20 @@ body {
 </head>
 
 <body>
-<h1 class="cursive">HI I Am A wEEB</h1>
+<h1 class="animated bounceInLeft" class="cursive">HI I Am A wEEB</h1>
 
 <img class="_6q-tv" src="https://qph.fs.quoracdn.net/main-qimg-3ceecb8dd595bbf10bda1c4665f738b6">
   
 <p class="animated bounceInLeft" style="font-size: 30px;">Facts about me</p>
 
-<h2>My hobbies</h2>
+<h2> class="animated bounceInLeft" My hobbies</h2>
 <ul>
   <li>Watch Anime</li>
   <li>Read Manga</li>
   <li>Read Light Novels</li>
 </ul>  
 
-<h2>Goals in 2019</h2>
+<h2> class="animated bounceInLeft" Goals in 2019</h2>
 
 <ol>
   <li>start doing homework</li>
