--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@ body {
   
 <p class="animated bounceInLeft" style="font-size: 30px;">Facts about me</p>
 
-<h2> class="animated bounceInLeft" My hobbies</h2>
+<h2 class="animated bounceInLeft"> My hobbies</h2>
 <ul>
   <li>Watch Anime</li>
   <li>Read Manga</li>
   <li>Read Light Novels</li>
 </ul>  
 
-<h2> class="animated bounceInLeft" Goals in 2019</h2>
+<h2 class="animated bounceInLeft"> Goals in 2019</h2>
 
 <ol>
   <li>start doing homework</li>
