--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ body {
   background-color: lightgreen;
   font-family: Coiny, cursive;
    text-align: center;
+  list-style-position: inside;
 }
 
 </style>
