--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ body {
 <body>
 <h1 class="animated bounceInLeft" class="cursive">HI I Am A wEEB</h1>
 
-<img class="_6q-tv" src="https://qph.fs.quoracdn.net/main-qimg-3ceecb8dd595bbf10bda1c4665f738b6">
+<img class="animated shake infinite" class="_6q-tv" src="https://qph.fs.quoracdn.net/main-qimg-3ceecb8dd595bbf10bda1c4665f738b6">
   
 <p class="animated bounceInLeft delay-1s" style="font-size: 30px;">Facts about me</p>
 
