--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 </head>
 <head>
+<script>
+function myFunction() {
+  document.getElementById("demo").innerHTML = "Hello World";
+}
+</script>
 <style>
 body {
   background-color: lightgreen;
@@ -75,6 +80,8 @@ body {
 <h1 class="animated bounceInLeft" class="cursive">HI I Am A wEEB</h1>
 
 <img class="animated shake infinite faster" src="https://qph.fs.quoracdn.net/main-qimg-3ceecb8dd595bbf10bda1c4665f738b6">
+	
+<button onclick="myFunction()">Click me</button>
   
 <p class="animated bounceInLeft delay-1s" style="font-size: 30px;">Facts about me</p>
 
