--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@ body {
 <img class="animated shake infinite faster" src="https://qph.fs.quoracdn.net/main-qimg-3ceecb8dd595bbf10bda1c4665f738b6">
 	
 <button onclick="myFunction()">Click me</button>
+	
+<p id="demo"></p>
   
 <p class="animated bounceInLeft delay-1s" style="font-size: 30px;">Facts about me</p>
 
