--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <head>
 <script>
 function myFunction() {
-  document.getElementById("demo").innerHTML = "Hello World";
+  document.getElementById("demo").innerHTML = "We're no strangers to love";
 }
 </script>
 <style>
@@ -83,7 +83,7 @@ body {
 
 <p id="demo"></p>
 	
-<button onclick="myFunction()">Click me</button>
+<button onclick="myFunction()">Click Me</button>
   
 <p class="animated bounceInLeft delay-1s" style="font-size: 30px;">Facts about me</p>
 
