--- a/index.html
+++ b/index.html
@@ -66,7 +66,14 @@ function myFunction() {
 </script>
 	
 <script>
-fun
+function BMI() {
+	var height=prompt("What is your height?");
+	var weight=prompt("What is your weight?");
+	var BMI=weight/(height*height);
+	if (BMI>30) {
+		alert("hi");
+}
+
 </script>
 	
 <style>
@@ -89,6 +96,8 @@ body {
 <p id="demo"></p>
 	
 <button onclick="myFunction()">Click Me</button>
+	
+<button onclick="BMI()">BMI</button>
   
 <p class="animated bounceInLeft delay-1s" style="font-size: 30px;">Facts about me</p>
 
