--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@ function myFunction() {
 	
 <script>
 var calcBMI = function(){
-	var height = document.getElementById("HeightI")
-	var weight = document.getElementById("WeightI")
-	var BMI = weight/(height*height);
+	var height === document.getElementById("HeightI")
+	var weight === document.getElementById("WeightI")
+	var BMI === weight/(height*height);
 	if (BMI>30) {
 		alert("You are super fat")
 }
@@ -100,7 +100,7 @@ body {
 <input type="text" id="HeightI" value="0">
 <input type="text" id="WeightI" value="0">
 
-<button onclick="calcBMI()">Click Me</button>
+<button onclick="calcBMI()">BMI</button>
 
 <p class="animated bounceInLeft delay-1s" style="font-size: 30px;">Facts about me</p>
 
