--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@ function myFunction() {
 	
 <script>
 var calcBMI = function(){
-	var height === document.getElementById("HeightI")
-	var weight === document.getElementById("WeightI")
+	var height === parseInt()document.getElementById("HeightI").innerHTML 
+	var weight === document.getElementById("WeightI").innerHTML
 	var BMI === weight/(height*height);
 	if (BMI>30) {
 		alert("You are super fat")
