--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ function myFunction() {
 <script>
 var calcBMI = function(){
 	var height === parseInt()document.getElementById("HeightI").innerHTML 
-	var weight === document.getElementById("WeightI").innerHTML
+	var weight === parseInt()document.getElementById("WeightI").innerHTML
 	var BMI === weight/(height*height);
 	if (BMI>30) {
 		alert("You are super fat")
@@ -97,8 +97,8 @@ body {
 	
 <button onclick="myFunction()">Click Me</button>
 	
-<input type="text" id="HeightI" value="0">
 <input type="text" id="WeightI" value="0">
+<input type="text" id="HeightI" value="0">
 
 <button onclick="calcBMI()">BMI</button>
 
