--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@ function myFunction() {
 	
 <script>
 var calcBMI = function(){
-	var height === parseInt()document.getElementById("HeightI").innerHTML 
-	var weight === parseInt()document.getElementById("WeightI").innerHTML
+	var height === parseInt(document.getElementById("HeightI").innerHTML)
+	var weight === parseInt(document.getElementById("WeightI").innerHTML)
 	var BMI === weight/(height*height);
 	if (BMI>30) {
 		alert("You are super fat")
