--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@ body {
 	
 <button onclick="myFunction()">Click Me</button>
 	
-<input type="text" id="WeightI" value="0">
-<input type="text" id="HeightI" value="0">
+<p Weight: <input type="text" id="WeightI" value="0">
+<p Height: <input type="text" id="HeightI" value="0">
 
 <button onclick="calcBMI()">BMI</button>
 
