--- a/index.html
+++ b/index.html
@@ -97,8 +97,12 @@ body {
 	
 <button onclick="myFunction()">Click Me</button>
 	
- Weight: <input type="text" id="WeightI" value="0">
- Height: <input type="text" id="HeightI" value="0">
+ Weight: <input type="text" id="WeightI" value="123">
+ Height: <input type="text" id="HeightI" value="2">
+	
+<div>
+<h1> 
+</div>
 
 <button onclick="calcBMI()">BMI</button>
 
