--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@ body {
 <link href="https://fonts.googleapis.com/css?family=Coiny" rel="stylesheet">
 </head>
 
+<title> Cool Stuff </title>
+
 <body>
 <h1 class="animated bounceInLeft" class="cursive">HI I Am A wEEB</h1>
 
